Arreglo de clases DAL

--- a/Red_Social_Citas/Red_Social_Citas.csproj
+++ b/Red_Social_Citas/Red_Social_Citas.csproj
@@ -128,7 +128,6 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Content\estilos.css" />
     <Compile Include="Controllers\IndexController.cs" />
-    <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -213,9 +212,11 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Shared\_Login-Layout.cshtml" />
     <Content Include="Views\Index\Index.cshtml" />
-    <Content Include="Views\Perfil\Perfil.cshtml" />
+    <Content Include="Views\Shared\_Logout-Layout.cshtml" />
+    <Content Include="Views\Usuario\Registrar.cshtml" />
+    <Content Include="Views\Usuario\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
