--- a/Red_Social_Citas/Red_Social_Citas.csproj
+++ b/Red_Social_Citas/Red_Social_Citas.csproj
@@ -217,6 +217,7 @@
     <Content Include="Views\Shared\_Logout-Layout.cshtml" />
     <Content Include="Views\Usuario\Registrar.cshtml" />
     <Content Include="Views\Usuario\Login.cshtml" />
+    <Content Include="Views\Usuario\Registrar2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
