--- a/Red_Social_Citas/Red_Social_Citas.csproj
+++ b/Red_Social_Citas/Red_Social_Citas.csproj
@@ -218,6 +218,12 @@
     <Content Include="Views\Usuario\Registrar.cshtml" />
     <Content Include="Views\Usuario\Login.cshtml" />
     <Content Include="Views\Usuario\Registrar2.cshtml" />
+    <Content Include="Views\Usuario\Registrar3.cshtml" />
+    <Content Include="Views\Usuario\Registrar4.cshtml" />
+    <Content Include="Views\Usuario\Registrar5.cshtml" />
+    <Content Include="Views\Usuario\Registrar6.cshtml" />
+    <Content Include="Views\Usuario\Registrar7.cshtml" />
+    <Content Include="Views\Usuario\Registrar8.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
