--- a/Red_Social_Citas/Red_Social_Citas.csproj
+++ b/Red_Social_Citas/Red_Social_Citas.csproj
@@ -224,6 +224,7 @@
     <Content Include="Views\Usuario\Registrar6.cshtml" />
     <Content Include="Views\Usuario\Registrar7.cshtml" />
     <Content Include="Views\Usuario\Registrar8.cshtml" />
+    <Content Include="Views\Usuario\Perfil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
