--- a/Red_Social_Citas/Red_Social_Citas.csproj
+++ b/Red_Social_Citas/Red_Social_Citas.csproj
@@ -216,7 +216,6 @@
     <Content Include="Views\Index\Index.cshtml" />
     <Content Include="Views\Shared\_Logout-Layout.cshtml" />
     <Content Include="Views\Usuario\Registrar.cshtml" />
-    <Content Include="Views\Usuario\Login.cshtml" />
     <Content Include="Views\Usuario\Registrar2.cshtml" />
     <Content Include="Views\Usuario\Registrar3.cshtml" />
     <Content Include="Views\Usuario\Registrar4.cshtml" />
@@ -225,9 +224,11 @@
     <Content Include="Views\Usuario\Registrar7.cshtml" />
     <Content Include="Views\Usuario\Registrar8.cshtml" />
     <Content Include="Views\Usuario\Perfil.cshtml" />
+    <Content Include="Views\Usuario\Mensajes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Fotos\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
