--- a/Red_Social_Citas/Web.config
+++ b/Red_Social_Citas/Web.config
@@ -17,12 +17,13 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Fotos" value="~/Fotos/"/>
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Account/Login" timeout="3880" />
     </authentication>
     <pages>
       <namespaces>
