--- a/Red_Social_Citas/Red_Social_Citas.csproj
+++ b/Red_Social_Citas/Red_Social_Citas.csproj
@@ -225,6 +225,8 @@
     <Content Include="Views\Usuario\Registrar8.cshtml" />
     <Content Include="Views\Usuario\Perfil.cshtml" />
     <Content Include="Views\Usuario\Mensajes.cshtml" />
+    <Content Include="Views\Usuario\EnviarMensaje.cshtml" />
+    <Content Include="Views\Usuario\PerfilCompleto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
